
  [ James McCoy ]
  * deb-reversion: Update md5sum of changelog if it's changed.  (Closes:
    #836725)
  * Change Getopt::Long configuration to disable gnu_compat so an '=' isn't
    required for optional arguments (e.g. "dch --news=").
  * chdist:
    + Silence warnings about uninitialized values.  Thanks to Christoph Biedl
      for the patch.  (Closes: #838185)

 -- Paul Wise <pabs@debian.org>  Sat, 27 Aug 2016 13:58:14 +0800

devscripts (2.16.7) unstable; urgency=medium

  [ Paul Wise ]
  * grep-excuses:
    + Fix the script for the removal of testing.pl from release.debian.org
  * dscverify:
    + Fix bash completion of the --no-conf option
  * uscan:
    + Strip whitespace from hrefs before processing (Closes: #833779)
    + Debug mode: print hrefs before checking them
  * Suggest reprotest for reproducible builds testing (Closes: #786755)

  [ Jakub Wilk ]
  * wnpp-alert:
    + Use HTTPS.

  [ Salvatore Bonaccorso ]
  * debchange: Add support for buster and bullseye
  * bts: Add the "bullseye" and "bullseye-ignore" tags.

  [ Christoph Berg ]
  * origtargz: Fix unpacking of tarballs found in --path.

  [ James McCoy ]
  * Remove . from @INC when loading modules dynamically. [CVE-2016-1238]
    (Closes: #832441)

 -- James McCoy <jamessan@debian.org>  Mon, 22 Aug 2016 00:01:48 -0400

devscripts (2.16.6) unstable; urgency=medium

  [ James McCoy ]
  * uscan:
    + Fix typo of "passive" in description of PASV FTP mode.  Thanks to Yann
      Dirson for the patch.  (Closes: #826321)
    + Fix an “undefined subroutine” error by using the, already imported, cwd
      function instead of getcwd.  (Closes: #827422)
  * dd-list:
    + Require an argument for ‘-s’ option, as intended, fixing a compatibility
      issue with Perl 5.24's Getopt::Long.  Thanks to Niko Tyni for the patch.
      (Closes: #826401)
  * debchange:
    + Merging the existing changelog stanza when a package is UNRELEASED and